scripts/main.css
@charset "utf-8";

/* CSS Document */

@font-face {
    font-family: Dodger;
    src: url(../fonts/dodger3_1.ttf);
}

@media (min-width: 992px) {
    .dropdown-menu {
        margin: 10px auto;
        width: 200px;
        left: 50%;
        margin-left: -100px;
    }
} 

body {
    width: 100%;
    height: 100%;
}

.navbar-brand {
    text-align: center;
    font-family: Dodger;
}

.navbar a,
.navbar li,
.navbar li a {
    font-family: Dodger;
    color: #770000;
}

h1,
h2,
h3,
h4 {
    font-family: Dodger;
    color: #770000;
    font-weight: bold;
}

#background {
    position: fixed;
    width: 100%;
    height: 100%;
    z-index: -99;
    background-color: #000;
    color: #00C;
}

#bgCode {
    color: #770000;
    font-weight: bold;
}

.navbar-brand {
    text-align: center;
    font-family: Dodger;
}
div.fluid-container p {
	text-align:justify;
	padding-left:150px;
	padding-right:150px;
}

.dropdown-toggle::after {
   transition: transform 0.15s linear; 
}

.show.dropdown .dropdown-toggle::after {
  transform: translateY(3px);
}

